# AGH_Systems_Programming

./: CMakeLists.txt
Classes1/: Task1.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  deadlock_test.py
Classes3/Advanced/: Makefile  advanced.c
Classes3/Circular/: Makefile  circular.c
Classes5/linked_buffer/mutex/: linked_buffer.c
Classes5/linked_buffer/rcu/: linked_buffer.c
Classes5/linked_buffer/semaphore/: linked_buffer.c
Classes5/linked_buffer/tests/: generate_writers.sh  run.sh
Classes5/mutex/: linked_buffer.c
Classes5/semaphore/: linked_buffer.c
Classes5/simple_sync/mutex/: simple_module.c
Classes5/simple_sync/semaphore/: simple_module.c
Classes5/simple_sync/spinlock/: Makefile  simple_module.c
Classes5/spinlock/: Makefile  linked_buffer.c
Classes5/tests/: run.sh  test.sh
Classes6/: Makefile  kernelps.c  syscalls.h  timeuser.c  topuser.c
Classes6/labsyscalls/: Makefile  freeblocks.c  pidtoname.c
Classes6/labsyscalls_tests/: Makefile  test_freeblocks.c  test_kernelps.c  test_pidtoname.c  test_timeuser.c  test_topuser.c
Classes6/labsyscalls_tests/labsyscalls/: test_kernelps.c  test_timeuser.c
Classes6/utils/: syscall_64.tbl  syscalls.h
Classes7/: Makefile  interrupt_module.c
